# Learning-Path-Generator

./: .env.example  .evn.example  .gitignore  README.md  docker-compose.yml  learning_paths.db  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/src/app/: main.py
backend/src/app/core/: auth.py  database.py  settings.py
backend/src/app/models/: learningpath.py  user.py  weeklyPlan.py
backend/src/app/repository/: learning_path.py  resource.py  user.py
backend/src/app/routes/: learning_path.py  user.py
backend/src/app/schemas/: learningpath.py  weeklyPlan.py
backend/src/app/services/: ai.py  learning_path.py  user.py
backend/src/app/tests/unit_tests/: conftest.py
backend/src/app/tests/unit_tests/learning_path/: conftest.py  test_learning_path_repository.py
backend/src/app/tests/unit_tests/resources/: test_resource_repository.py  test_resource_routes.py
backend/src/app/tests/unit_tests/user/: test_user_repository.py  test_user_routes.py  test_user_service.py
backend/src/app/tests/unit_tests/utils/: test_email_normalization.py
backend/src/app/tests/unit_tests/weekly_plan/: conftest.py  test_weekly_plan_service.py
backend/src/app/utils/: email.py
docker/: postgres-init.sql
docs/: LearnPathAPI  LearnPathAPI.yaml
frontend/: .dockerignore  .gitignore  Dockerfile  components.json  next.config.ts  package.json  playwright.config.ts
frontend/e2e/: 0-signup.spec.ts  create-path.spec.ts  detail-page.spec.ts  login.spec.ts  logout.spec.ts
src/app/: main.py
(+84 files in other folders)
