[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.136.1",
    "psycopg[binary]>=3.3.4",
    "groq>=1.2.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.12.1",
    "requests>=2.33.1",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.5.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
